compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__unqualified_import_errors_do_not_block_later_unqualified.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 307
expression: "import rakun.{Unknown, type Int as Integer}\n\npub fn main() -> Integer {\n  Nil\n}"
---
----- SOURCE CODE
import rakun.{Unknown, type Int as Integer}

pub fn main() -> Integer {
  Nil
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:15
  │
1 │ import rakun.{Unknown, type Int as Integer}
  │               ^^^^^^^

The module `rakun` does not have a `Unknown` value.

error: Type mismatch
  ┌─ /src/one/two.rakun:4:3
  │
4 │   Nil
  │   ^^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Integer

Found type:

    Nil
